<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/orange">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/verifyChoreRecyclerView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="10dp"
        android:scrollbars="vertical"
        android:divider="@android:color/transparent"
        tools:listitem="@layout/text_row_verify_chore_item"/>
</LinearLayout>