<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/orange">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/parentAllRewardHistoryRecyclerView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="10dp"
        android:scrollbars="vertical"
        android:divider="@android:color/transparent"
        tools:listitem="@layout/fragment_parent_all_rewards_text_row_item"
        >
    </androidx.recyclerview.widget.RecyclerView>
</LinearLayout>